--- a/DeviceManagerConfig.json
+++ b/DeviceManagerConfig.json
@@ -13,7 +13,7 @@
     "logFilesToKeep":15,
     "IpaDelay": 15,
     "StartupWaitTime": 240,
-    "DBLastUpdatedThreshold": 1200,
+    "DBLastUpdatedTimeMessageThreshold": 1200,
     "DeviceStartupDBContactDelay": 240,
     "Errors" : {"Failed to connect to Backend" : "Issue Connecting to Backend", "Device is not assigned to an instance!": "No Instance Assigned to Device", "unexpected exit or crash" : "Unexpected Error", "Failed to get account and not logged in": "Error Getting Account", "in a row. Restarting": "Restarted Due to No Data: ", "Too many instances" : "Too Many Instances Error", "Alert to not exist": "Alert is on the phone", "test3LoginPassword]' failed": "Login Failure", "Logging out failed": "Logout Failure" },
     "UninstallErrors":  ["Error Getting Account"],
