--- a/DeviceManagerConfig.json
+++ b/DeviceManagerConfig.json
@@ -21,6 +21,7 @@
     "NoContactDBRestartTime": 300,
     "raidMaxTime": 15,
     "minDelayLogout": 360,
+    "destinationTimeout" : 180,
     "targetMaxDistance": 700.0,
     "users": {"yourusername": {"password": "PokemonIsAwesome"}},
     "DeviceManagerTableString": "<style> table.GeneratedTable { width: 100%; background-color: #ffffff; border-collapse: collapse; border-width: 1px; border-color: #ffcc00; border-style: solid; color: #000000; } table.GeneratedTable td, table.GeneratedTable th { border-width: 2px; border-color: #ffcc00; border-style: solid; padding: 2px; } table.GeneratedTable thead { background-color: #ffcc00; } tr:nth-child(even) {background-color: #99b6e5;} </style> <table class=\"GeneratedTable\"> <thead> <tr> <th>Device</th> <th>Status</th> <th>Instance</th> <th>LastUpdated</th> <th>Actions</th></tr> </thead> <tbody>"
